[gd_scene load_steps=9 format=3 uid="uid://c0pt7ohpwcc0e"]

[ext_resource type="Script" path="res://Script/label_reponse.gd" id="1_xq3fu"]
[ext_resource type="Texture2D" uid="uid://gqor0isbuapi" path="res://Assets/buttons/fond label.png" id="2_ume7m"]
[ext_resource type="Texture2D" uid="uid://biymg5nonu66r" path="res://Assets/buttons/IMG_2903.png" id="3_cqx1f"]
[ext_resource type="Texture2D" uid="uid://rft3m16046e0" path="res://Assets/buttons/IMG_2905.png" id="4_ekyrm"]

[sub_resource type="LabelSettings" id="LabelSettings_ik26b"]

[sub_resource type="LabelSettings" id="LabelSettings_livpp"]

[sub_resource type="LabelSettings" id="LabelSettings_ehv46"]

[sub_resource type="LabelSettings" id="LabelSettings_37fy8"]

[node name="label_reponse" type="Control"]
process_mode = 3
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xq3fu")

[node name="FondLabel" type="Sprite2D" parent="."]
position = Vector2(0, 40)
scale = Vector2(0.148562, 0.148562)
texture = ExtResource("2_ume7m")

[node name="Label" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Rep1" type="Label" parent="Label"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "I"
label_settings = SubResource("LabelSettings_ik26b")

[node name="Rep2" type="Label" parent="Label"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "II"
label_settings = SubResource("LabelSettings_livpp")

[node name="Rep3" type="Label" parent="Label"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "III"
label_settings = SubResource("LabelSettings_ehv46")

[node name="Rep4" type="Label" parent="Label"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "IV"
label_settings = SubResource("LabelSettings_37fy8")

[node name="Rep5" type="Label" parent="Label"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "V"
label_settings = SubResource("LabelSettings_ik26b")

[node name="Rep6" type="Label" parent="Label"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "VI"
label_settings = SubResource("LabelSettings_livpp")

[node name="Rep7" type="Label" parent="Label"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "VII"
label_settings = SubResource("LabelSettings_ehv46")

[node name="Rep8" type="Label" parent="Label"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "VIII"
label_settings = SubResource("LabelSettings_37fy8")

[node name="Rep9" type="Label" parent="Label"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "IX"
label_settings = SubResource("LabelSettings_ik26b")

[node name="Marker" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="M1" type="Marker2D" parent="Marker"]
position = Vector2(-250, 38)

[node name="M2" type="Marker2D" parent="Marker"]
position = Vector2(0, 38)

[node name="M3" type="Marker2D" parent="Marker"]
position = Vector2(250, 38)

[node name="Buttons" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Fleche_gauche" type="TextureButton" parent="Buttons"]
process_mode = 3
z_index = 1
layout_mode = 0
offset_left = -561.0
offset_top = 146.0
offset_right = -389.0
offset_bottom = 246.0
rotation = -1.5708
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(86, 49)
texture_normal = ExtResource("3_cqx1f")

[node name="Fleche_droite" type="TextureButton" parent="Buttons"]
process_mode = 3
z_index = 1
layout_mode = 0
offset_left = -449.0
offset_top = 147.0
offset_right = -277.0
offset_bottom = 247.0
rotation = 1.5708
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(86, 49)
texture_normal = ExtResource("3_cqx1f")

[node name="ok" type="TextureButton" parent="Buttons"]
z_index = 1
layout_mode = 0
offset_left = -1441.0
offset_top = -828.0
offset_right = 607.0
offset_bottom = 1220.0
scale = Vector2(0.022, 0.022)
pivot_offset = Vector2(1022, 1022)
texture_normal = ExtResource("4_ekyrm")

[connection signal="pressed" from="Buttons/Fleche_gauche" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Buttons/Fleche_droite" to="." method="_on_right_pressed"]
[connection signal="pressed" from="Buttons/ok" to="." method="_on_ok_pressed"]
